--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "axios": "^0.19.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-hook-form": "^3.29.2",
+    "react-hook-form": "^3.29.4",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
@@ -25,7 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build-fake-server": "node server/seed.js",
+    "start-fake-server": "json-server --port 3001 --watch server/db.json"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -45,6 +47,7 @@
   "devDependencies": {
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.3",
+    "json-server": "^0.15.1",
     "node-sass": "^4.13.0"
   }
 }
