--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "devDependencies": {
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.3",
+    "@types/redux-devtools-extension": "^2.13.2",
     "json-server": "^0.15.1",
     "node-sass": "^4.13.0"
   }
