--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,22 @@ yarn-debug.log*
 yarn-error.log*
 
 server/.env
+
+*.pyc
+*.db
+*~
+.*
+
+/site/
+/htmlcov/
+/coverage/
+/build/
+/dist/
+/*.egg-info/
+/env/
+MANIFEST
+coverage.*
+
+!.gitignore
+!.travis.yml
+!.isort.cfg
