--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start-fake-server": "json-server --port 3001 --watch server/db.json"
+    "start-fake-server": "json-server --port 3001 --watch server/start_db.json"
   },
   "eslintConfig": {
     "extends": "react-app"
