--- a/server/django_wallet/requirements.txt
+++ b/server/django_wallet/requirements.txt
@@ -4,6 +4,7 @@ chardet==3.0.4
 defusedxml==0.6.0
 Django==3.0.1
 django-allauth==0.41.0
+django-cors-headers==3.2.0
 django-filter==2.2.0
 django-rest-auth==0.9.5
 djangorestframework==3.11.0
