--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/redux-devtools-extension": "^2.13.2",
     "json-server": "^0.15.1",
-    "node-sass": "^4.13.0"
+    "node-sass": "^4.13.0",
+    "storybook-addon-jsx": "^7.1.14"
   }
 }
