--- a/package.json
+++ b/package.json
@@ -1,32 +1,15 @@
 {
   "name": "react_wallet",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.1.1",
+  "private": false,
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "cypress:run": "cypress run",
-    "cypress:open": "cypress open",
-    "cypress:faker": "echo holus",
-    "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -42,26 +25,28 @@
     "react-hook-form": "^3.29.4",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.3.0",
     "redux": "^4.0.4",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
-    "typescript": "~3.7.2"
+    "sass": "^1.50.0",
+    "typescript": "^3.7.2"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^5.3.9",
-    "@storybook/addon-knobs": "^5.3.9",
-    "@storybook/addon-links": "^5.3.9",
-    "@storybook/addon-viewport": "^5.3.9",
-    "@storybook/addons": "^5.3.9",
-    "@storybook/preset-create-react-app": "^1.5.2",
-    "@storybook/react": "^5.3.9",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.3",
-    "@types/redux-devtools-extension": "^2.13.2",
-    "cypress": "^4.0.2",
-    "json-server": "^0.15.1",
-    "node-sass": "^4.13.0",
-    "storybook-addon-jsx": "^7.1.14"
+    "@types/redux-devtools-extension": "^2.13.2"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
